--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.10",
-    "typescript": "~2.6.2"
+    "typescript": "~2.6.2",
+    "web3": "github:ethereum/web3.js"
   },
   "description": "An Ionic project"
 }
